# ffe-chess-openings-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  evaluate.py  health.py  moves.py  vector_search.py  videos.py
backend/app/core/: __init__.py  config.py
backend/app/graph/: __init__.py  vector_search_graph.py  videos_graph.py
backend/app/schemas/: __init__.py  chess.py  rag.py  video.py
backend/app/scripts/: __init__.py  ingest.py
backend/app/services/: __init__.py  embeddings.py  fen.py  lichess.py  milvus_client.py  stockfish_engine.py  youtube.py
backend/data/wikichess/: caro-kann.md  defense-indienne-du-roi.md  espagnole.md  francaise.md  gambit-dame.md  italienne.md  sicilienne.md
