[project]
name = "ffe-chess-backend"
version = "0.1.0"
description = "FastAPI backend for the FFE chess openings learning agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic-settings==2.7.1",
    "chess>=1.11.2",
    "httpx>=0.28.1",
    "stockfish>=5.2.0",
    "pymilvus>=3.0.0",
    "sentence-transformers>=5.6.0",
    "langgraph>=1.2.7",
    "google-api-python-client>=2.198.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
